--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -2,121 +2,85 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{% block metatags %}
-			<meta charset="utf-8">
-			<title>{% block headtitle %}Django Custom Errors{% endblock %}</title>
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<meta name="description" content="{% trans 'An app to manage errors page ...'%}">
-			<meta name="author" content="Davide La Rosa">
-		{% endblock %}
-		
-		<!-- Cascade Style Sheets -->
-		{% if jquery == 'bootstrap' %}
-			<link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.min.css'%}">
+		<meta charset="utf-8">
+		<title>Social Profile</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="{% trans 'Enable Social Profile connections with OAuth'%}">
+		<meta name="author" content="Davide La Rosa">
 
-			<link rel="stylesheet" href="{% static 'css/jquery/jquery-ui-1.10.3.custom.css'%}">
-			<!--[if lt IE 9]>
-				<link rel="stylesheet" href="{% static 'css/jquery/jquery.ui.1.10.3.ie.css'%}">
-			<![endif]-->
-
-			<link rel="stylesheet" href="{% static 'css/font-awesome/font-awesome.min.css'%}">
-			<!--[if IE 7]>
-				<link rel="stylesheet" href="{% static 'css/font-awesome/font-awesome-ie7.min.css'%}">
-			<![endif]-->
-			
-			<link rel="stylesheet" href="{% static 'js/google-code-prettify/prettify.css'%}">
-			<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-			<!--[if lt IE 9]>
-				<script src="{% static 'js/vendor/html5shiv.js'%}" type="text/javascript"></script>
-				<script src="{% static 'js/vendor/respond.min.js'%}" type="text/javascript"></script>
-			<![endif]-->
-
-			<!-- Le fav and touch icons -->
-			<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'ico/favicon_256x256.png'%}">
-			<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static 'ico/favicon_256x256'%}">
-			<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'ico/favicon_256x256'%}">
-			<link rel="apple-touch-icon-precomposed" href="{% static 'ico/favicon_256x256'%}">
-			<link rel="shortcut icon" href="{% static 'ico/favicon_256x256.png'%}">
-
-			<!-- For Chrome for Android: -->
-			<link rel="icon" sizes="192x192" href="touch-icon-192x192.png">
-			<!-- For iPhone 6 Plus with @3× display: -->
-			<link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
-			<!-- For iPad with @2× display running iOS ≥ 7: -->
-			<link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152-precomposed.png">
-			<!-- For iPad with @2× display running iOS ≤ 6: -->
-			<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
-			<!-- For iPhone with @2× display running iOS ≥ 7: -->
-			<link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120-precomposed.png">
-			<!-- For iPhone with @2× display running iOS ≤ 6: -->
-			<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
-			<!-- For the iPad mini and the first- and second-generation iPad (@1× display) on iOS ≥ 7: -->
-			<link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76-precomposed.png">
-			<!-- For the iPad mini and the first- and second-generation iPad (@1× display) on iOS ≤ 6: -->
-			<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
-			<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-			<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png"><!-- 57×57px -->
-
-			<!-- <script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script> -->
-			<script src="{% static 'js/jquery/jquery-1.10.2.js'%}" type="text/javascript"></script>
-			<script src="{% static 'js/jquery/jquery-migrate-1.2.1.min.js'%}" type="text/javascript"></script>
-			<!-- <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> -->
-			<script src="{% static 'js/jquery/ui/1.11.4/jquery-ui.js'%}"></script>
-		{% else %}
-			<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-			<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-			<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-		{% endif %}
-
-		{% if debug %}
-			<script type="text/javascript">
-				var isDebug = true;
-			</script>
-		{% else %}
-			<script type="text/javascript">
-				var isDebug = false;
-			</script>
-		{% endif %}
-
-		<script>
-			/* Fix Facebook Appending Hash */
-			if (window.location.hash == "#_=_")
-				window.location.hash = "";
-		</script>
-
-		{% block head %}{% endblock %}
+		<!-- Le styles -->
+		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" rel="stylesheet">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+		<style>
+		  h1 { padding: 0 30px; }
+		  .col-md-2 { width: 18.6667%; }
+		  .buttons { display: block; table-layout: fixed; border-radius: 7px; border: 1px solid #ccc;
+					 margin: 20px; background: #eee; padding: 30px; }
+		  .buttons > div .btn { margin: 5px 10px; }
+		  .buttons > div:not(:first-child) { margin-top: 10px; border-top: 1px solid #ccc;
+											 padding-top: 10px; text-align: center; }
+		  .user-details { text-align: center; font-size: 16px; font-weight: bold; }
+		  .disconnect-form { padding: 0; margin: 0px 10px; }
+		  .disconnect-form > a { display: block; margin: 5px 0 !important; }
+		</style>
 	</head>
 
-	<body {% block body_class %}{% endblock %}>
+	<body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true" >
+		{% block content %}
 
-		<section {% block page_role %} data-role="page" data-theme="b" {% endblock %} >
+		{% endblock %}
 
-			{% block header %}{% include "header.html" %}{% endblock %}
+		{% if plus_id %}
+		<script src="https://apis.google.com/js/api:client.js"></script>
+		<script type="text/javascript">
+			gapi.load('auth2', function () {
+			  var auth2;
 
-			{% block messages %}
-				{% if messages %}
-					<div class="ui-bar ui-bar-e">
-						{% for message in messages %}
-							<h3>{{ message }}</h3>
-						{% endfor %}
-					</div>
-				{% endif %}
-			{% endblock %}
+			  auth2 = gapi.auth2.init({
+				client_id: "{{ plus_id }}",
+				scope: "{{ plus_scope }}"
+			  });
 
-			{% block content %}<p>No Content Defined</p>{% endblock %}
+			  auth2.then(function () {
+				var button = document.getElementById("google-plus-button");
+				console.log("User is signed-in in Google+ platform?", auth2.isSignedIn.get() ? "Yes" : "No");
 
-			{% block footer %}{% include "footer.html" %}{% endblock %}
+				if (button) {
+				  auth2.attachClickHandler(button, {}, function (googleUser) {
+					var authResponse = googleUser.getAuthResponse();
+					var $form;
+					var $input;
 
-			{% if jquery == 'bootstrap' %}
-				<!-- Placed at the end of the document so the pages load faster -->
-				<script src="{% static 'js/google-code-prettify/prettify.js'%}" type="text/javascript"></script>
-				<script src="{% static 'js/bootstrap/bootstrap.js'%}" type="text/javascript"></script>
-				<script src="{% static 'js/bootstrap/holder.js'%}" type="text/javascript"></script>
-				<!-- <script src="{% static 'js/jquery/jquery-ui-1.10.3.custom.min.js'%}" type="text/javascript"></script> -->
-			{% endif %}
+					$form = $("<form>");
+					$form.attr("action", "{% url "social:complete" backend="google-plus" %}");
+					$form.attr("method", "post");
+					$input = $("<input>");
+					$input.attr("name", "access_token");
+					$input.attr("value", authResponse.access_token);
+					$form.append($input);
+					$form.append("{% csrf_token %}");
+					$(document.body).append($form);
+					$form.submit();
+				  });
+				} else if (auth2.isSignedIn.get()) {
+				  $('#logout').on('click', function (event) {
+					event.preventDefault();
 
-			{% block bottom_js %}{% endblock %}
-		
-		</section>
+					auth2.signOut().then(function () {
+					  console.log("Logged out from Google+ platform");
+					  document.location = $(event.target).attr('href');
+					});
+				  });
+				}
+			  });
+			});
+		</script>
+		{% endif %}
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+		<script src="https://login.persona.org/include.js" type="text/javascript"></script>
+
 	</body>
 </html>
