--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -12,23 +12,23 @@
 		
 		<!-- Cascade Style Sheets -->
 		{% if jquery == 'bootstrap' %}
-			<link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.min.css'%}">
+			<link rel="stylesheet" href="{% static 'base/css/bootstrap/bootstrap.min.css'%}">
 
-			<link rel="stylesheet" href="{% static 'css/jquery/jquery-ui-1.10.3.custom.css'%}">
+			<link rel="stylesheet" href="{% static 'base/css/jquery/jquery-ui-1.10.3.custom.css'%}">
 			<!--[if lt IE 9]>
-				<link rel="stylesheet" href="{% static 'css/jquery/jquery.ui.1.10.3.ie.css'%}">
+				<link rel="stylesheet" href="{% static 'base/css/jquery/jquery.ui.1.10.3.ie.css'%}">
 			<![endif]-->
 
-			<link rel="stylesheet" href="{% static 'css/font-awesome/font-awesome.min.css'%}">
+			<link rel="stylesheet" href="{% static 'base/css/font-awesome/font-awesome.min.css'%}">
 			<!--[if IE 7]>
-				<link rel="stylesheet" href="{% static 'css/font-awesome/font-awesome-ie7.min.css'%}">
+				<link rel="stylesheet" href="{% static 'base/css/font-awesome/font-awesome-ie7.min.css'%}">
 			<![endif]-->
 			
 			<link rel="stylesheet" href="{% static 'js/google-code-prettify/prettify.css'%}">
 			<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
-				<script src="{% static 'js/vendor/html5shiv.js'%}" type="text/javascript"></script>
-				<script src="{% static 'js/vendor/respond.min.js'%}" type="text/javascript"></script>
+				<script src="{% static 'base/js/vendor/html5shiv.js'%}" type="text/javascript"></script>
+				<script src="{% static 'base/js/vendor/respond.min.js'%}" type="text/javascript"></script>
 			<![endif]-->
 
 			<!-- Le fav and touch icons -->
