--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -1,7 +1,12 @@
 {% load i18n static %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
+        <meta charset="utf-8">
+
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-N77NJD5');</script>
+
 		{% block metatags %}
 			<meta charset="utf-8">
 			<title>{% block headtitle %}Django Custom Errors{% endblock %}</title>
