--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -10,11 +10,12 @@
 		{% block metatags %}
 			<meta charset="utf-8">
 			<title>{% block headtitle %}Django Custom Errors{% endblock %}</title>
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 			<meta name="description" content="{% trans 'An app to manage errors page ...'%}">
 			<meta name="author" content="DLRSP">
 		{% endblock %}
-		
+
 		<!-- Cascade Style Sheets -->
 		{% if jquery == 'bootstrap' %}
 			<link rel="stylesheet" href="{% static 'base/css/bootstrap/bootstrap.min.css'%}">
@@ -28,7 +29,7 @@
 			<!--[if IE 7]>
 				<link rel="stylesheet" href="{% static 'base/css/font-awesome/font-awesome-ie7.min.css'%}">
 			<![endif]-->
-			
+
 			<link rel="stylesheet" href="{% static 'js/google-code-prettify/prettify.css'%}">
 			<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
@@ -65,6 +66,8 @@
 		{% else %}
 			<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		{% endif %}
+		<link rel="stylesheet" type="text/css" href="{% static 'base/css/bootstrap.min.css'%}">
+        <link rel="stylesheet" type="text/css" href="{% static 'base/css/style.css' %}">
 
 		{% if debug %}
 			<script type="text/javascript">
@@ -85,9 +88,9 @@
 		{% block head %}{% endblock %}
 	</head>
 
-	<body {% block body_class %}{% endblock %}>
+	<body {% block body_class %} class="text-center" {% endblock %}>
 
-		<section {% block page_role %} data-role="page" data-theme="b" {% endblock %} >
+        <div class="container">
 
 			{% block messages %}
 				{% if messages %}
@@ -102,13 +105,12 @@
 			{% block content %}<p>No Content Defined</p>{% endblock %}
 
 			{% if jquery == 'bootstrap' %}
-				<!-- Placed at the end of the document so the pages load faster -->
 				<script src="{% static 'base/js/bootstrap.min.js'%}" type="text/javascript"></script>
 			{% endif %}
 			<script src="{% static 'base/js/jquery.min.js'%}" type="text/javascript"></script>
 
 			{% block bottom_js %}{% endblock %}
-		
-		</section>
+
+		</div>
 	</body>
 </html>
