--- a/example/templates/errors/404-image.html
+++ b/example/templates/errors/404-image.html
@@ -5,7 +5,7 @@
 
 	{% load_error_img as error_img %}
 
-	<div style="background-image: url( {% static error_img %} );">
+	<div style="background-image: url( {{ MEDIA_URL }}{% static error_img %} );">
 		<strong>Oops! </strong> {{ error_message }}
 	</div>
 
