--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -39,7 +39,7 @@
 		{% block head %}{% endblock %}
 	</head>
 
-	<body {% block body_class %} class="text-center" {% endblock %}>
+	<body {% block body_css %} class="text-center" {% endblock %}>
 
         <div class="container">
 
@@ -55,12 +55,10 @@
 
 			{% block content %}<p>No Content Defined</p>{% endblock %}
 
-			{% if jquery == 'bootstrap' %}
-				<script src="{% static 'base/js/bootstrap.min.js'%}" type="text/javascript"></script>
-			{% endif %}
+			<script src="{% static 'base/js/bootstrap.min.js'%}" type="text/javascript"></script>
 			<script src="{% static 'base/js/jquery.min.js'%}" type="text/javascript"></script>
 
-			{% block bottom_js %}{% endblock %}
+			{% block js %}{% endblock %}
 
 		</div>
 	</body>
