--- a/example/templates/errors/404-image.html
+++ b/example/templates/errors/404-image.html
@@ -2,20 +2,26 @@
 {% load errors %}
 
 {% block headtitle %}
-	{{ error }} ({{ error_code }}) - Custom with Image
+	{{ error }} ({{ error_code }}) - Custom with Image + JS
 {% endblock headtitle %}
 
 {% block content %}
-
-	{% block body_class %}
+	{% block body_css %}
 		{% load_error_img as error_img %}
 		style="background-image: url( {{ MEDIA_URL }}{{ error_img }} );"
-	{% endblock body_class %}
+	{% endblock body_css %}
 
-    <section title="{{ error }}">
-        <h2>
-			<strong>Oops! </strong> {{ error_message }}
-		</h2>
-    </section>
+	<div class="d-flex align-items-start flex-column h-100vh inverse-text text-center">
+		<div class="ml-auto mr-auto">
+			<div class="alert alert-danger alert-dismissible fade" id="error-alert" role="alert" align="center">
+				<strong>Oops! </strong> {{ error_message }}
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"> <span aria-hidden="true">×</span> </button>
+			</div>
+		</div>
+	</div>
 
 {% endblock content %}
+
+{% block js %}
+    <script src="{% static 'base/js/scripts-errors.js' %}"></script>
+{% endblock js %}
