- fix missed load static

--- a/example/templates/errors/404-image.html
+++ b/example/templates/errors/404-image.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load errors %}
+{% load static errors %}
 
 {% block headtitle %}
 	{{ error }} ({{ error_code }}) - Custom with Image + JS
