--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -39,8 +39,7 @@
 		{% block head %}{% endblock %}
 	</head>
 
-	<body {% block body_css %} class="text-center" {% endblock %}>
-
+	<body>
         <div class="container">
 
 			{% block messages %}
@@ -55,8 +54,8 @@
 
 			{% block content %}<p>No Content Defined</p>{% endblock %}
 
-			<script src="{% static 'base/js/bootstrap.min.js'%}" type="text/javascript"></script>
 			<script src="{% static 'base/js/jquery.min.js'%}" type="text/javascript"></script>
+			<script src="{% static 'base/js/bootstrap.min.js'%}" type="text/javascript"></script>
 
 			{% block js %}{% endblock %}
 
