--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -20,26 +20,12 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'base/css/bootstrap.min.css'%}">
         <link rel="stylesheet" type="text/css" href="{% static 'base/css/style.css' %}">
 
-		{% if debug %}
-			<script type="text/javascript">
-				var isDebug = true;
-			</script>
-		{% else %}
-			<script type="text/javascript">
-				var isDebug = false;
-			</script>
-		{% endif %}
-
-		<script>
-			/* Fix Facebook Appending Hash */
-			if (window.location.hash == "#_=_")
-				window.location.hash = "";
-		</script>
-
 		{% block head %}{% endblock %}
+
+		{% block css %}{% endblock %}
 	</head>
 
-	<body>
+	<body class="text-center">
         <div class="container">
 
 			{% block messages %}
