--- a/example/templates/errors/404-image.html
+++ b/example/templates/errors/404-image.html
@@ -8,7 +8,7 @@
 {% block css %}
 	{% load_error_img as error_img %}
 	<style>
-		html {
+		body {
 		  background: url({{ MEDIA_URL }}{{ error_img }}) no-repeat center center fixed;
 		  -webkit-background-size: cover;
 		  -moz-background-size: cover;
