- split custom behaviors

--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -26,13 +26,20 @@
 		</form>
 	</div>
 	<div>
+		<h2>defaults</h2>
 		<p>
 			<a href="{% url 'bad_request' %}" class="btn btn-warning" role="button">400</a>
 			<a href="{% url 'permission_denied' %}" class="btn btn-primary" role="button">403</a>
 			<a href="{% url 'not_found' %}" class="btn btn-info" role="button">404</a>
-			<a href="{% url 'not_found_with_image' %}" class="btn btn-info" role="button">404 (with image)</a>
 			<a href="{% url 'not_allowed' %}" class="btn btn-warning" role="button">405</a>
 			<a href="{% url 'internal_server_error' %}" class="btn btn-danger" role="button">500</a>
+		</p>
+	</div>
+	<div>
+		<h2>customs</h2>
+		<p>
+			<a href="{% url 'not_found_with_js' %}" class="btn btn-info" role="button">404 (JavaScript)</a>
+			<a href="{% url 'not_found_with_image' %}" class="btn btn-info" role="button">404 (Background's image)</a>
 		</p>
 	</div>
 
