--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -28,7 +28,7 @@
 	<div>
 		<h2>defaults</h2>
 		<p>
-			<a href="{% url 'bad_request' %}" class="btn btn-warning" role="button">400</a>
+			<a href="{% url 'bad_request' %}" class="btn btn-secondary" role="button">400</a>
 			<a href="{% url 'permission_denied' %}" class="btn btn-primary" role="button">403</a>
 			<a href="{% url 'not_found' %}" class="btn btn-info" role="button">404</a>
 			<a href="{% url 'not_allowed' %}" class="btn btn-warning" role="button">405</a>
