- remove default content

--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -38,7 +38,7 @@
 				{% endif %}
 			{% endblock %}
 
-			{% block content %}<p>No Content Defined</p>{% endblock %}
+			{% block content %}{% endblock %}
 
 			<script src="{% static 'base/js/jquery.min.js'%}" type="text/javascript"></script>
 			<script src="{% static 'base/js/bootstrap.min.js'%}" type="text/javascript"></script>
